<resources>
    <string name="GC_title">Globular Cluster</string>
    <string name="Gxy_title">Galaxy</string>
    <string name="GxyCld_title">Galaxy Cloud</string>
    <string name="HIIRgn_title">HII region</string>
    <string name="Neb_title">Nebula</string>
    <string name="OC_title">Open Cluster</string>
    <string name="OCNeb_title">Open Cluster and Nebula</string>
    <string name="PN_title">Planetary Nebula</string>
    <string name="SNR_title">Super Nova remnant</string>
    <string name="conston">constOn</string>
    <string name="antialiasing">antialiasing</string>
    <string name="star_chart_options">Star Chart options</string>
    <string name="horiz_fill">horiz_fill</string>
    <string name="userhor">userhor</string>
    <string name="crossview">crossview</string>
    <string name="pscolors">pscolors</string>
    <string name="invsky">invsky</string>
    <string name="bright_star_label">bright_star_label</string>
    <string name="object_label">object_label</string>
    <string name="userhorizonon">userHorizonOn</string>
    <string name="horizon">horizOn</string>
    <string name="grid_preference">grid_preference</string>
    <string name="grid_label">grid_label</string>
    <string name="other_label">other_label</string>
    <string name="type_planet">type_PLANET</string>
    <string name="type_star">type_STAR</string>
    <string name="type_ds">type_DS</string>
    <string name="type_comet">type_COMET</string>
    <string name="type_custom">type_CUSTOM</string>
    <string name="done">Done</string>
    <string name="select_catalog_user_category">select_catalog_user_category</string>
    <string name="select_catalog_clear">select_catalog_clear</string>
    <string name="select_catalog_messier">select_catalog_messier</string>
    <string name="select_catalog_caldwell">select_catalog_caldwell</string>
    <string name="select_catalog_hershell">select_catalog_hershell</string>
    <string name="select_catalog_ngcic">select_catalog_ngcic</string>
    <string name="select_catalog_sac">select_catalog_sac</string>
    <string name="select_catalog_ugc">select_catalog_ugc</string>
    <string name="select_catalog_ldn">select_catalog_ldn</string>
    <string name="select_catalog_barnard">select_catalog_barnard</string>
    <string name="select_catalog_lbn">select_catalog_lbn</string>
    <string name="select_catalog_pk">select_catalog_pk</string>
    <string name="select_catalog_abell">select_catalog_abell</string>
    <string name="select_catalog_hickson">select_catalog_hickson</string>
    <string name="select_catalog_wds">select_catalog_wds</string>
    <string name="select_catalog_planet">select_catalog_planet</string>
    <string name="select_catalog_comet">select_catalog_comet</string>
    <string name="select_catalog_pgc">select_catalog_pgc</string>
    <string name="select_catalog_sh2">select_catalog_sh2</string>
    <string name="type_gc">type_GC</string>
    <string name="type_gxy">type_Gxy</string>
    <string name="type_gxycld">type_GxyCld</string>
    <string name="type_hiirgn">type_HIIRgn</string>
    <string name="type_neb">type_Neb</string>
    <string name="type_oc">type_OC</string>
    <string name="type_ocneb">type_OCNeb</string>
    <string name="type_pn">type_PN</string>
    <string name="type_snr">type_SNR</string>
    <string name="type_cg">type_cg</string>
    <string name="type_dn">type_dn</string>
    <string name="type_ast">type_ast</string>
    <string name="obj_types_clear">obj_types_clear</string>
    <string name="object_label_layer">object_label_layer</string>
    <string name="messier">Messier</string>
    <string name="caldwell">Caldwell</string>
    <string name="herschel_400">Herschel 400</string>
    <string name="_12_515_objects_of_all_types">12 515 objects of all types</string>
    <string name="ngcic">NgcIc</string>
    <string name="saguaro_astronomy_club_database_n10_342_objects_of_all_types">Saguaro Astronomy Club database.\n10 342 objects of all types</string>
    <string name="sac">SAC</string>
    <string name="uppsala_general_catalogue_of_galaxies_nugc_is_an_essentially_complete_catalogue_of_galaxies_to_a_limiting_diameter_of_1_0_and_or_to_a_limiting_apparent_magnitude_of_14_5">Uppsala General Catalogue of Galaxies</string>
    <string name="ugc">UGC</string>
    <string name="_45_000_galaxies_to_16m_not_including_ngcic_and_ugc_galaxies">45 000 galaxies to 16m not including NGCIC and UGC galaxies</string>
    <string name="lynds_catalogue_of_dark_nebulae_">Lynds\' Catalogue of Dark Nebulae</string>
    <string name="ldn">LDN</string>
    <string name="barnard_s_catalogue_of_349_dark_objects_in_the_sky_">Barnard\'s Catalogue of 349 Dark Objects in the Sky</string>
    <string name="barnard">Barnard</string>
    <string name="lynds_catalogue_of_bright_nebulae">Lynds\' Catalogue of Bright Nebulae</string>
    <string name="lbn">LBN</string>
    <string name="catalogue_of_hii_regions">Catalogue of HII regions</string>
    <string name="sh2">SH2</string>
    <string name="catalogue_of_galactic_planetary_nebulae_">Catalogue of Galactic Planetary Nebulae</string>
    <string name="pk">PK</string>
    <string name="catalogue_of_abell_clusters_of_galaxies_">Catalogue of Abell Clusters of Galaxies</string>
    <string name="abell">Abell</string>
    <string name="hickson_compact_group_">Hickson Compact Group</string>
    <string name="hcg">HCG</string>
    <string name="the_washington_visual_double_star_catalog_">The Washington Visual Double Star Catalog</string>
    <string name="wds">WDS</string>
    <string name="comets">Comets</string>
    <string name="minor_planets">Minor Planets</string>
    <string name="select_catalog_up1">select_catalog_up1</string>
    <string name="select_catalog_up2">select_catalog_up2</string>
    <string name="select_catalog_up3">select_catalog_up3</string>
    <string name="select_catalog_up4">select_catalog_up4</string>
    <string name="select_catalog_up5">select_catalog_up5</string>
    <string name="select_catalog_up6">select_catalog_up6</string>
    <string name="select_catalog_up7">select_catalog_up7</string>
    <string name="select_catalog_up8">select_catalog_up8</string>
    <string name="select_catalog_up9">select_catalog_up9</string>
    <string name="select_catalog_up10">select_catalog_up10</string>
    <string name="select_catalog_bright_ds">select_catalog_bright_ds</string>
    <string name="brightest_double_stars">Brightest Double Stars</string>
    <string name="_2271_brightest_double_stars">2271 brightest double stars</string>
    <string name="show_double_separation">show_double_separation</string>
    <string name="select_catalog_galaxies_category">select_catalog_galaxies_category</string>
    <string name="object_labels_obs_list_">Object labels (Obs List)</string>
    <string name="object_labels_layers_">Object labels (Layers)</string>
    <string name="labels_for_objects_from_observation_lists">Labels for objects from observation lists</string>
    <string name="labels_for_objects_from_star_chart_layers">Labels for objects from star chart layers</string>
    <string name="deselect_all">Deselect All</string>
    <string name="select_object_catalogs">Select object catalogs</string>
    <string name="select_object_types">Select object types</string>
    <string name="brightest_objects">Brightest objects</string>
    <string name="galaxies">Galaxies</string>
    <string name="nebula">Nebula</string>
    <string name="clusters_of_galaxies">Clusters of galaxies</string>
    <string name="double_stars">Double Stars</string>
    <string name="comets_and_minor_planets">Comets and Minor Planets</string>
    <string name="user_databases">User databases</string>
    <string name="begin_time_and_date">Begin Time and date</string>
    <string name="now">Now</string>
    <string name="sunset">Sunset</string>
    <string name="astro_twilight_ends">Astro Twilight Ends</string>
    <string name="sunrise">Sunrise</string>
    <string name="astro_twilight_begins">Astro Twilight Begins</string>
    <string name="end_time2">End Time</string>
    <string name="object_marker">Object Marker</string>
    <string name="selected_object_crosshair_with_tool_set">Selected object crosshair with tool set</string>
    <string name="enable_object_marker">Enable Object Marker</string>
    <string name="_settings_">"    Settings..."</string>
    <string name="star_chart_elements">Star Chart elements</string>
    <string name="select_grid_type">Select grid type</string>
    <string name="grid2">Grid</string>
    <string name="constellations_lines">Constellation lines</string>
    <string name="horizon_line">Horizon line</string>
    <string name="fill_area_below_horizon">Fill area below horizon</string>
    <string name="antialiasing_lowers_performance">Antialiasing. Lowers performance</string>
    <string name="smooth_hard_line_edges">Smooth hard line edges</string>
    <string name="labels">Labels</string>
    <string name="bright_star_labels">Bright star labels</string>
    <string name="show_component_and_separation_on_the_star_chart_for_double_stars_from_yale_bright_star_catalog">Show component and separation on the star chart for double stars from Yale Bright Star Catalog</string>
    <string name="double_star_info">Double star info</string>
    <string name="grid_labels">Grid labels</string>
    <string name="zenith_nadir_horizon_labels">Zenith, nadir, horizon labels</string>
    <string name="other_labels">Other labels</string>
    <string name="star_chart_colors">Star Chart colors</string>
    <string name="black_stars_on_white_background_in_day_mode">Black stars on white background in day mode</string>
    <string name="inverse_sky">Inverse sky</string>
    <string name="colors_for_the_star_chart_elements_only">Colors for the Star Chart elements only</string>
    <string name="daytime_mode_colors">Daytime mode colors</string>
    <string name="user_horizon">User Horizon</string>
    <string name="the_closed_line_defined_in_the_text_file">The closed line defined in the text file</string>
    <string name="enable_user_horizon">Enable User Horizon</string>
    <string name="asterism">Asterism</string>
    <string name="cluster_of_galaxies">Cluster of galaxies</string>
    <string name="dark_nebula">Dark Nebula</string>
    <string name="star2">Star</string>
    <string name="comet2">Comet</string>
    <string name="minor_planet2">Minor Planet</string>
    <string name="double_star2">Double Star</string>
    <string name="custom_type">Custom Type</string>
    <string name="select_deselect_all">Select/Deselect All</string>
    <string name="select_catalog_nebula_category">select_catalog_nebula_category</string>
    <string name="select_catalog_clusters_category">select_catalog_clusters_category</string>
    <string name="select_catalog_ds_category">select_catalog_ds_category</string>
    <string name="select_catalog_brightest_objects_category">select_catalog_brightest_objects_category</string>
    <string name="select_catalog_mp_category">select_catalog_mp_category</string>
    <string name="con_boundaries1">con_boundaries1</string>
    <string name="constellation_boundaries">Constellation boundaries</string>
    <string name="milky_way">milky_way</string>
    <string name="milky_way2">Milky Way</string>
    <string name="fov_column">fov_column</string>
    <string name="fov_column_title">FOV column</string>
    <string name="psncolors">psncolors</string>
    <string name="night_time_red_color_intensity">Night time red color intensity</string>
    <string name="night_time">Night time</string>
    <string name="d_scale_labels">d_scale_labels</string>
    <string name="labels_scale">Labels scale</string>
    <string name="scale_factor_of_star_and_object_labels_0_100_">Make star and object labels larger or smaller (1 is the default size, 0.5 - half the default size)</string>
    <string name="use_to_reduce_enlarge_label_size">Use to reduce / enlarge label size</string>
</resources>