<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" 
    android:title="@string/select_object_types"
    >
     <Preference
	    android:key="@string/obj_types_clear"
	    android:layout="@layout/pref"	    
	    android:title="@string/select_deselect_all" />

     
     <CheckBoxPreference
            android:layout="@layout/prefc"
            android:defaultValue="false"
            android:key="@string/type_ast"
            android:title="@string/asterism" />
     <CheckBoxPreference
            android:layout="@layout/prefc"
            android:defaultValue="false"
            android:key="@string/type_cg"
            android:title="@string/cluster_of_galaxies" />
     <CheckBoxPreference
            android:layout="@layout/prefc"
            android:defaultValue="false"
            android:key="@string/type_comet"
            android:title="@string/comet2" />
     <CheckBoxPreference
            android:layout="@layout/prefc"
            android:defaultValue="false"
            android:key="@string/type_dn"
            android:title="@string/dark_nebula" />   
  
     <CheckBoxPreference
            android:layout="@layout/prefc"
            android:defaultValue="true"
            android:key="@string/type_gc"
            android:title="@string/GC_title" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:layout="@layout/prefc"
            android:defaultValue="true"
            android:key="@string/type_gxy"
            android:title="@string/Gxy_title" />
        <CheckBoxPreference
            android:layout="@layout/prefc"
            android:defaultValue="false"
            android:key="@string/type_gxycld"
            android:title="@string/GxyCld_title" />
        <CheckBoxPreference
            android:layout="@layout/prefc"
            android:defaultValue="false"
            android:key="@string/type_hiirgn"
            android:title="@string/HIIRgn_title" />
        <CheckBoxPreference
            android:layout="@layout/prefc"
            android:defaultValue="false"
            android:key="@string/type_planet"
            android:title="@string/minor_planet2" />

        <CheckBoxPreference
            android:layout="@layout/prefc"
            android:defaultValue="false"
            android:key="@string/type_neb"
            android:title="@string/Neb_title" />
        <CheckBoxPreference
            android:layout="@layout/prefc"
            android:defaultValue="false"
            android:key="@string/type_oc"
            android:title="@string/OC_title" />
        <CheckBoxPreference
            android:layout="@layout/prefc"
            android:defaultValue="false"
            android:key="@string/type_ocneb"
            android:title="@string/OCNeb_title" />
        <CheckBoxPreference
            android:layout="@layout/prefc"
            android:defaultValue="false"
            android:key="@string/type_pn"
            android:title="@string/PN_title" />
        <CheckBoxPreference
            android:layout="@layout/prefc"
            android:defaultValue="false"
            android:key="@string/type_snr"
            android:title="@string/SNR_title" />
        
        <CheckBoxPreference
            android:layout="@layout/prefc"
            android:defaultValue="false"
            android:key="@string/type_star"
            android:title="@string/star2" />
         <CheckBoxPreference
            android:layout="@layout/prefc"
            android:defaultValue="false"
            android:key="@string/type_ds"
            android:title="@string/double_star2" />
         
          <CheckBoxPreference
            android:layout="@layout/prefc"
            android:defaultValue="false"
            android:key="@string/type_custom"
            android:title="@string/custom_type" />


</PreferenceScreen>
